Debugged all three pages

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
             <a class="navbar-brand" href="#">Matt Recker</a>
           </div>
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="#">About</a></li>
-            <li><a href="#">Portfolio</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="index.html">About</a></li>
+            <li><a href="portfolio.html">Portfolio</a></li>
+            <li><a href="contact.html">Contact</a></li>
           </ul>
         </div>
         </div>
@@ -34,8 +34,8 @@
                     </div>
                     <div class="row">
                         <div class="col-md-12">
-                                <img src="http://via.placeholder.com/200x200" alt="About Me Image">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed pellentesque dui nec facilisis ultrices. Maecenas pellentesque orci sed lectus elementum, quis dictum orci efficitur. Donec ut sem sit amet nulla elementum pharetra scelerisque id nulla. Suspendisse nec nibh non est ullamcorper hendrerit. Donec mattis interdum massa, a tristique lorem scelerisque vel. Duis in dictum ipsum. Fusce turpis metus, consectetur eget tellus efficitur, gravida gravida quam. Sed vulputate neque ut sapien porttitor ullamcorper. Cras id est id urna dapibus dignissim id non diam. Nullam aliquet tortor nec ultricies elementum. Curabitur blandit imperdiet odio at auctor. Nam massa turpis, pulvinar nec feugiat in, convallis sit amet magna. Fusce sit amet purus sit amet quam dictum bibendum in quis est. Curabitur ullamcorper congue lorem et semper.  Morbi quis finibus sapien. Praesent lobortis nulla at nisl tincidunt luctus. Morbi efficitur vehicula tempor. Sed scelerisque, erat ac rhoncus auctor, dolor justo sagittis elit, sit amet fermentum tellus lorem non justo. Nullam quis sapien vitae lectus volutpat luctus eget vitae erat. Ut vitae enim dapibus, consectetur nisi ac, blandit eros. Ut a erat ac purus cursus malesuada quis eu ligula. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nullam diam diam, iaculis in nunc ut, finibus mollis mauris. Suspendisse potenti.</p>
+                                <img class="imgAbout" src="http://via.placeholder.com/200x200" alt="About Me Image">
+                                <p class="pAbout">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed pellentesque dui nec facilisis ultrices. Maecenas pellentesque orci sed lectus elementum, quis dictum orci efficitur. Donec ut sem sit amet nulla elementum pharetra scelerisque id nulla. Suspendisse nec nibh non est ullamcorper hendrerit. Donec mattis interdum massa, a tristique lorem scelerisque vel. Duis in dictum ipsum. Fusce turpis metus, consectetur eget tellus efficitur, gravida gravida quam. Sed vulputate neque ut sapien porttitor ullamcorper. Cras id est id urna dapibus dignissim id non diam. Nullam aliquet tortor nec ultricies elementum. Curabitur blandit imperdiet odio at auctor. Nam massa turpis, pulvinar nec feugiat in, convallis sit amet magna. Fusce sit amet purus sit amet quam dictum bibendum in quis est. Curabitur ullamcorper congue lorem et semper.  Morbi quis finibus sapien. Praesent lobortis nulla at nisl tincidunt luctus. Morbi efficitur vehicula tempor. Sed scelerisque, erat ac rhoncus auctor, dolor justo sagittis elit, sit amet fermentum tellus lorem non justo. Nullam quis sapien vitae lectus volutpat luctus eget vitae erat. Ut vitae enim dapibus, consectetur nisi ac, blandit eros. Ut a erat ac purus cursus malesuada quis eu ligula. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nullam diam diam, iaculis in nunc ut, finibus mollis mauris. Suspendisse potenti.</p>
                         </div>
                     </div>
                 </div>
