--- a/portfolio.html
+++ b/portfolio.html
@@ -17,9 +17,9 @@
             <a class="navbar-brand" href="#">Matt Recker</a>
           </div>
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="#">About</a></li>
-            <li><a href="#">Portfolio</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="index.html">About</a></li>
+            <li><a href="portfolio.html">Portfolio</a></li>
+            <li><a href="contact.html">Contact</a></li>
           </ul>
         </div>
         </div>
@@ -35,33 +35,33 @@
                     <div class="row">
                         <div class="col-md-6">
                             <a href="#"><img src="assets/images/city.jpg" alt="Portfolio Image"></a>
-                                <p>City</p>
+                                <p class="pPort">City</p>
                         </div>
                         <div class="col-md-6">
                             <a href="#"><img src="assets/images/iPad.jpg" alt="Portfolio Image"></a>
-                                <p>iPad</p>  
+                                <p class="pPort">iPad</p>  
                         </div>
                     </div>
                 <br>
                     <div class="row">
                         <div class="col-md-6">
                             <a href="#"><img src="assets/images/swim.jpg" alt="Portfolio Image"></a>
-                                <p>Swim</p>
+                                <p class="pPort">Swim</p>
                         </div>
                         <div class="col-md-6">
                             <a href="#"><img src="assets/images/explain.jpg" alt="Portfolio Image"></a>
-                                <p>Explain</p>    
+                                <p class="pPort">Explain</p>    
                         </div>
                     </div>
                 <br>
                     <div class="row">
                         <div class="col-md-6">
                             <a href="#"><img src="assets/images/beach.jpeg" alt="Portfolio Image"></a>
-                                <p>Beach</p>
+                                <p class="pPort">Beach</p>
                         </div>
                         <div class="col-md-6">
                             <a href="#"><img src="assets/images/hair.jpeg" alt="Portfolio Image"></a>
-                                <p>Hair</p>    
+                                <p class="pPort">Hair</p>    
                         </div>
                     </div>
                 </div>
