--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
     <nav class="navbar navbar-default">
         <div class="container-fluid container">
           <div class="navbar-header">
-            <a class="navbar-brand" href="#">Matt Recker</a>
+            <a class="navbar-brand" href="index.html">Matt Recker</a>
           </div>
           <ul class="nav navbar-nav navbar-right">
             <li><a href="index.html">About</a></li>
@@ -71,17 +71,17 @@
                     </div>
                     <div class="row">
                         <div class="col-md-4">
-                            <a href="#">
+                            <a href="https://github.com/mrecker13" target="_blank">
                                 <i class="fa fa-github fa-4x" aria-hidden="true"></i>
                             </a>
                         </div>
                         <div class="col-md-4">
-                            <a href="#">
+                            <a href="https://www.linkedin.com/in/matthew-recker/" target="_blank">
                                 <i class="fa fa-linkedin-square fa-4x" aria-hidden="true"></i>
                             </a>
                         </div>
                         <div class="col-md-4">
-                           <a href="#">
+                           <a href="https://stackoverflow.com/users/8716650/m-recker" target="_blank">
                                <i class="fa fa-stack-overflow fa-4x" aria-hidden="true"></i>
                             </a>
                         </div>
