--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <nav class="navbar navbar-default">
         <div class="container-fluid container">
           <div class="navbar-header">
-            <a class="navbar-brand" href="#">Matt Recker</a>
+            <a class="navbar-brand" href="index.html">Matt Recker</a>
           </div>
           <ul class="nav navbar-nav navbar-right">
             <li><a href="index.html">About</a></li>
@@ -34,8 +34,8 @@
                     </div>
                     <div class="row">
                         <div class="col-md-12">
-                                <img class="imgAbout" src="http://via.placeholder.com/200x200" alt="About Me Image">
-                                <p class="pAbout">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed pellentesque dui nec facilisis ultrices. Maecenas pellentesque orci sed lectus elementum, quis dictum orci efficitur. Donec ut sem sit amet nulla elementum pharetra scelerisque id nulla. Suspendisse nec nibh non est ullamcorper hendrerit. Donec mattis interdum massa, a tristique lorem scelerisque vel. Duis in dictum ipsum. Fusce turpis metus, consectetur eget tellus efficitur, gravida gravida quam. Sed vulputate neque ut sapien porttitor ullamcorper. Cras id est id urna dapibus dignissim id non diam. Nullam aliquet tortor nec ultricies elementum. Curabitur blandit imperdiet odio at auctor. Nam massa turpis, pulvinar nec feugiat in, convallis sit amet magna. Fusce sit amet purus sit amet quam dictum bibendum in quis est. Curabitur ullamcorper congue lorem et semper.  Morbi quis finibus sapien. Praesent lobortis nulla at nisl tincidunt luctus. Morbi efficitur vehicula tempor. Sed scelerisque, erat ac rhoncus auctor, dolor justo sagittis elit, sit amet fermentum tellus lorem non justo. Nullam quis sapien vitae lectus volutpat luctus eget vitae erat. Ut vitae enim dapibus, consectetur nisi ac, blandit eros. Ut a erat ac purus cursus malesuada quis eu ligula. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nullam diam diam, iaculis in nunc ut, finibus mollis mauris. Suspendisse potenti.</p>
+                                <img class="imgAbout" src="assets/images/aboutMe.jpg" alt="About Me Image">
+                                <p class="pAbout">I am a tech lover and quick learner with a background in project management and statistics. I take pride in seeing projects through from start to finish, while doing so in a timely manner. I am making a career move to web development and look forward to learning as much as I can from others and my own experience.</p>
                         </div>
                     </div>
                 </div>
@@ -48,17 +48,17 @@
                     </div>
                     <div class="row">
                         <div class="col-md-4">
-                            <a href="#">
+                            <a href="https://github.com/mrecker13" target="_blank">
                                 <i class="fa fa-github fa-4x" aria-hidden="true"></i>
                             </a>
                         </div>
                         <div class="col-md-4">
-                            <a href="#">
+                            <a href="https://www.linkedin.com/in/matthew-recker/" target="_blank">
                                 <i class="fa fa-linkedin-square fa-4x" aria-hidden="true"></i>
                             </a>
                         </div>
                         <div class="col-md-4">
-                           <a href="#">
+                           <a href="https://stackoverflow.com/users/8716650/m-recker" target="_blank">
                                <i class="fa fa-stack-overflow fa-4x" aria-hidden="true"></i>
                             </a>
                         </div>
