--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@
     <nav class="navbar navbar-default">
         <div class="container-fluid container">
           <div class="navbar-header">
-            <a class="navbar-brand" href="#">Matt Recker</a>
+            <a class="navbar-brand" href="index.html">Matt Recker</a>
           </div>
           <ul class="nav navbar-nav navbar-right">
             <li><a href="index.html">About</a></li>
@@ -34,34 +34,30 @@
                     </div>
                     <div class="row">
                         <div class="col-md-6">
-                            <a href="#"><img src="assets/images/city.jpg" alt="Portfolio Image"></a>
-                                <p class="pPort">City</p>
+                            <a href="https://rating-reader.herokuapp.com/" target="_blank"><img class="portfolioImg" src="assets/images/RatingReader.png" alt="Portfolio Image"></a>
+                                <p class="pPort">Rating Reader</p>
                         </div>
                         <div class="col-md-6">
-                            <a href="#"><img src="assets/images/iPad.jpg" alt="Portfolio Image"></a>
-                                <p class="pPort">iPad</p>  
-                        </div>
-                    </div>
-                <br>
-                    <div class="row">
-                        <div class="col-md-6">
-                            <a href="#"><img src="assets/images/swim.jpg" alt="Portfolio Image"></a>
-                                <p class="pPort">Swim</p>
-                        </div>
-                        <div class="col-md-6">
-                            <a href="#"><img src="assets/images/explain.jpg" alt="Portfolio Image"></a>
-                                <p class="pPort">Explain</p>    
+                            <a href="https://randolfresurreccion.github.io/MyPlace/" target="_blank"><img class="portfolioImg" src="assets/images/MyPlace.png" alt="Portfolio Image"></a>
+                                <p class="pPort">MyPlace</p>  
                         </div>
                     </div>
                 <br>
                     <div class="row">
                         <div class="col-md-6">
-                            <a href="#"><img src="assets/images/beach.jpeg" alt="Portfolio Image"></a>
-                                <p class="pPort">Beach</p>
+                            <a href="https://eat-da-burger-cbc-nov.herokuapp.com/" target="_blank"><img class="portfolioImg" src="assets/images/burger.png" alt="Portfolio Image"></a>
+                                <p class="pPort">Eat da Burger</p>
                         </div>
                         <div class="col-md-6">
-                            <a href="#"><img src="assets/images/hair.jpeg" alt="Portfolio Image"></a>
-                                <p class="pPort">Hair</p>    
+                            <a href="https://friend-finder-cbc-nov.herokuapp.com/" target="_blank"><img class="portfolioImg" src="assets/images/friendFinder.png" alt="Portfolio Image"></a>
+                                <p class="pPort">Friend Finder</p>    
+                        </div>
+                    </div>
+                <br>
+                    <div class="row">
+                        <div class="col-md-6">
+                            <a href="https://mongo-scraper-espn.herokuapp.com/" target="_blank"><img class="portfolioImg" src="assets/images/webScraper.png" alt="Portfolio Image"></a>
+                                <p class="pPort">ESPN Web Scraper</p>
                         </div>
                     </div>
                 </div>
@@ -74,17 +70,17 @@
                     </div>
                     <div class="row">
                         <div class="col-md-4">
-                            <a href="#">
+                            <a href="https://github.com/mrecker13" target="_blank">
                                 <i class="fa fa-github fa-4x" aria-hidden="true"></i>
                             </a>
                         </div>
                         <div class="col-md-4">
-                            <a href="#">
+                            <a href="https://www.linkedin.com/in/matthew-recker/" target="_blank">
                                 <i class="fa fa-linkedin-square fa-4x" aria-hidden="true"></i>
                             </a>
                         </div>
                         <div class="col-md-4">
-                           <a href="#">
+                           <a href="https://stackoverflow.com/users/8716650/m-recker" target="_blank">
                                <i class="fa fa-stack-overflow fa-4x" aria-hidden="true"></i>
                             </a>
                         </div>
